--- a/Equitable-Access-to-Nutrition-in-Utah.tex
+++ b/Equitable-Access-to-Nutrition-in-Utah.tex
@@ -179,7 +179,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Equitable Access to Nutrition in Utah},
-  pdfauthor={Gregory S. Macfarlane; Emma Stucki; Myrranda Salmon; Alisha Redelfs; Lori Spruance},
+  pdfauthor={Gregory S. Macfarlane; Emma Stucki; Myrranda Salmon; Alisha H. Redelfs; Lori Spruance},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -189,7 +189,7 @@
 
 \title{Equitable Access to Nutrition in Utah}
 \author{Gregory S. Macfarlane \and Emma Stucki \and Myrranda
-Salmon \and Alisha Redelfs \and Lori Spruance}
+Salmon \and Alisha H. Redelfs \and Lori Spruance}
 \date{2023-09-01}
 
 \begin{document}
@@ -203,18 +203,18 @@ Utah, alongside the community members' ability to access that
 environment through multiple transportation modes. In doing so we
 construct a utility-based accessiblity model enabled by modern mobility
 device data. This model reveals the tradeoffs between the quality and
-price of goods on one hand and the distance travelled to reach them on
-the other. We then apply this model to a series of potential access
--improving policies: building a new store, improving an existing store,
-and improving the non-automobile transport network between residents and
-existing stores. The results show that new or improved store locations
-bring substantially higher benefits than improvements to the
-transportation system, at likely lower costs. The report recommends that
-UDOT work to increase the availaibility of community-sized grocery
-stores in low-access areas, and consider activity- based methods of
+price of goods on one hand and the distance traveled to reach them on
+the other. We then apply this model to a series of potential
+access-improving policies: building a new store, improving an existing
+store, and improving the non-automobile transport network between
+residents and existing stores. The results show that new or improved
+store locations bring substantially higher benefits than improvements to
+the transportation system, at likely lower costs. The report recommends
+that UDOT work to increase the availability of community-sized grocery
+stores in low-access areas, and consider activity-based methods of
 measuring resource access.
 \end{abstract}
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, enhanced, sharp corners, frame hidden, interior hidden, breakable]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[enhanced, frame hidden, breakable, sharp corners, interior hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -324,19 +324,19 @@ literature on access to nutrition specifically.
 Policies}\label{existing-transportation-and-health-policies}}
 
 Transportation policy impacts the way our transportation systems
-function in cities, and along with that, impact the way that we live our
-lives as well. For example, transportation policy that demands a certain
-level of safety on roadways creates a better, safer, travel network for
-those using the roads. Also, policy that puts the pedestrian first helps
-improve the quality and quantity of sidewalks and bike ways in cities,
-improving active transportation. There are many different types of
-policies that can be established, whether they be required by federal
-law, or established through the individual decisions of local or state
-governments. Because these policies make such a big impact on the way we
-live it is important to discover what types of policies exist currently,
-where there are areas that are missing in policy and practice, and
-discover how this research can help to bridge the gap between identified
-need and practical application.
+function in cities, and along with that, impacts the way that we live
+our lives as well. For example, transportation policy that demands a
+certain level of safety on roadways creates a better, safer, travel
+network for those using the roads. Also, policy that puts the pedestrian
+first helps improve the quality and quantity of sidewalks and bike ways
+in cities, improving active transportation. There are many different
+types of policies that can be established, whether they be required by
+federal law, or established through the individual decisions of local or
+state governments. Because these policies make such a big impact on the
+way we live it is important to discover what types of policies exist
+currently, where there are areas that are missing in policy and
+practice, and discover how this research can help to bridge the gap
+between identified need and practical application.
 
 How UDOT and other departments of transportation (DOTs) approach their
 responsibility to improve quality of life beyond providing mobility is a
@@ -346,7 +346,7 @@ project prioritization processes.
 
 Transportation impacts public health across several different sectors
 identified in the literature, which have been grouped together into four
-general topics:Traffic Safety, Pollution, Active Transportation, and
+general topics: Traffic Safety, Pollution, Active Transportation, and
 Access to Community Resources. These four topics mirror the focus points
 of the UDOT mission, with Traffic Safety and Pollution corresponding to
 Good Health, Active Transportation corresponding to Better Mobility, and
@@ -368,15 +368,15 @@ annual rates prior to 2020.
 Efforts to improve traffic safety in policy take various forms. One of
 the strategies to improve safety focuses on educating the public to
 minimize reckless and distracted driving. Research clearly shows the
-danger of both reckless and distracted driving and we have seen a recent
-national focus on eliminating distracted driving National Highway
+danger of both reckless and distracted driving and we have recently seen
+a national focus on eliminating distracted driving National Highway
 Traffic Safety Administration (2022). In response, Utah has implemented
 the Zero Fatalities program, focusing on decreasing the number of
 roadway fatalities to zero by educating the public on deadly driving
 behaviors, including distracted driving, aggressive driving, drowsy
 driving, impaired driving, and not wearing seat belts (Zero Fatalities,
 2022). Zero Fatalities has different age-specific educational materials
-for students and teachers. These age groups include pre-drivers, new
+for students and teachers. These age groups include pre-drivers, newly
 licensed teenagers, experienced drivers, and even driving instructors.
 But, educating the public does not solve all safety concerns; if the
 roadways themselves are not safe for the drivers, there needs to be a
@@ -384,15 +384,16 @@ change to those roadways as well.
 
 Efforts to change the roadways have focused on improving facilities
 design to enhance safety for cars as well as for bikes and pedestrians
-Monfort et al. (2021). In 2012 the Federal Highway Administration
-established a federal aid program titled the Safe System Approach that
-focuses on different programs including the Strategic Highway Safety
-Plan (SHSP), Highway Safety Improvement Program (HSIP), Railroad-Highway
-Crossings Program (RHCP), and High Risk Rural Roads (HRRR) (Finkel et
-al., 2020). Of these four programs included in the safe system approach,
-the HSIP is the only one that has been mandated and implemented in every
-state, including Utah. The HSIP gives federal funding for projects,
-plans, activities, and reports that improve safety of highways.
+(Charreire et al., 2021; Jarry and Apparicio, 2021; Monfort et al.,
+2021). In 2012 the Federal Highway Administration established a federal
+aid program titled the Safe System Approach that focuses on different
+programs including the Strategic Highway Safety Plan (SHSP), Highway
+Safety Improvement Program (HSIP), Railroad-Highway Crossings Program
+(RHCP), and High Risk Rural Roads (HRRR) (Finkel et al., 2020). Of these
+four programs included in the safe system approach, the HSIP is the only
+one mandated and implemented in every state, including Utah. The HSIP
+gives federal funding for projects, plans, activities, and reports that
+improve safety of highways.
 
 Vision Zero (Vision Zero Network, 2022) is a safety program funded by a
 non-profit organization that has been implemented in many communities
@@ -411,18 +412,17 @@ order to be involved in Vision Zero the following must be true:
   Zero community to strive for zero fatalities on the roadway.
 \end{itemize}
 
-This program is a multinational road traffic safety program and
-something that has potential to greatly improve traffic safety in
-communities where it is implemented. The Vision Zero focus is to
-eliminate traffic fatalities and severe injuries with a clear strategy
-or plan. A map showing the communities involved is in
-Figure~\ref{fig-visionzero}. Vision Zero has not been implemented in any
-communities in Utah. Two major differences between Vison Zero and Utah's
-Zero Fatalities program are that Zero Fatalities does not yet have a
-specific target date of when the state will reach zero fatalities, and
-Vision Zero typically includes many stakeholders such as transportation
-professionals, policy makers, public health officials, police, and
-community members.
+This program is a multinational road traffic safety program with the
+potential to greatly improve traffic safety in communities where it is
+implemented. The Vision Zero focus is to eliminate traffic fatalities
+and severe injuries with a clear strategy or plan. A map showing the
+communities involved is in Figure~\ref{fig-visionzero}. Vision Zero has
+not been implemented in any communities in Utah. Two major differences
+between Vison Zero and Utah's Zero Fatalities program are that Zero
+Fatalities does not yet have a specific target date of when the state
+will reach zero fatalities, and Vision Zero typically includes many
+stakeholders such as transportation professionals, policy makers, public
+health officials, police, and community members.
 
 \begin{figure}[t]
 
@@ -490,17 +490,17 @@ One problem with fine particulate matter and vehicle pollution is that
 it has differential effects related to demographics, with some
 communities experiencing more severe health disparities (Chakraborty,
 2022). In order to more equitably address some of these pollution
-problems, the EPA has established a guidance related to Environmental
+problems, the EPA has established guidance related to Environmental
 Justice to ``determine any disproportionately high and adverse human
 health or environmental effects to low-income, minority, and tribal
 populations''. This guidance is met through the National Environmental
 Policy Act (NEPA), which requires an impact assessment for every federal
 action -- including most transportation infrastructure projects -- that
-could have an impact on the environment. A report must be submitted
-describing any potential environmental or health impacts, or findings of
-no significant impact. This is intended to protect communities that
-could be more adversely affected by new transportation projects or
-improvements.
+could have an impact on the environment. A report describing any
+potential environmental or health impacts or findings of no significant
+impact must be submitted. This process and legislation is intended to
+protect communities that could be more adversely affected by new
+transportation projects or improvements.
 
 In some ways these national and state measures have helped, and recent
 evidence that shows a decrease in air pollution related deaths in the
@@ -550,7 +550,9 @@ there does seem to be some pattern, with those states that have a higher
 physical activity, also having a lower obesity rate. There are a few
 outliers, such as Nevada, with a low obesity rate and a low physical
 activity percentage, but overall, there is a correlation coefficient
-between the two indicators of 0.64.
+between the two indicators of 0.64. It should be noted in this context
+that obesity is a complex disease with many contributing factors, of
+which physical activity is only one (Dhurandhar et al., 2021).
 
 \begin{figure}
 
@@ -653,13 +655,13 @@ in projects and policy.
 Equitable access to community resources has been a topic of research and
 study, especially when looking at the impacts on measures of well-being
 and economic opportunity. Current social issues, economic opportunity
-and equity are significant topics which can help us to ensure that each
-demographic of the population can have the same opportunities. Equity as
-a term is being fair and impartial, different from equality. Equality is
+and equity are significant topics that can help us ensure that each
+population demographic can have similar opportunities. Equity as a term
+is being fair and impartial, different from equality. Equality is
 providing the exact same thing to all people, whereas equity would
 provide different things to different people because of their
-circumstances in order to create a fair system. Lower income populations
-frequently sit at a different level of advantage than higher income
+circumstances in order to create a fair system. Lower-income populations
+frequently sit at a different level of advantage than higher-income
 populations, including when looking at accessibility Witten et al.
 (2003). It is important to discover how different transportation
 policies can improve accessibility to create better equity. Creating
@@ -667,8 +669,8 @@ equitable societies and equitable transportation policies is important
 in order to remove any discrimination already present in the
 transportation network. In this way states can decrease the disparity
 that is common when looking at different neighborhoods and demographics.
-Perhaps there are low economic neighborhoods that do not have the same
-economic opportunity or resource accessibility as higher income
+Perhaps there are low-income neighborhoods that do not have the same
+economic opportunity or resource accessibility as high-income
 neighborhoods. If we increase the accessibility of low-income
 neighborhoods, could that then increase the quality of life and health
 for those neighborhoods as well?
@@ -677,21 +679,21 @@ In addition to economic opportunity, the connection between well-being
 and opportunity is also significant, discovering who has access to which
 resources and how that access corresponds to their health Schwanen et
 al. (2015). A subjective sense of positive well-being correlates with
-increased access to more community resources. This increased access was
+increased access to more community resources: increased access was
 specifically connected with variety of resources, not necessarily number
-of the same type of resource. This is true for both high and low income
-populations. However, high income demographics frequently tend have
-better access to a variety of resources because of such variables as
-available child care, a transportation source available, or even time
-available to do things Liu et al. (2022) . In addition, increased access
-to resources such as parks or other greenspace have been found to
-decrease likelihood of mental health disorders, as well as improve
-physical activity Madzia et al. (2019). Different age groups each have a
-different response to access to greenspace. However, among all age
-groups there is a positive correlation.In addition to health impacts,
-lack of accessibility also affects economic opportunity when considering
-access to employment, affordable care, and other stores and shops Hu
-(2015).
+of the same type of resource. This increased access is true for both
+high- and low-income populations. However, high-income demographics
+frequently tend have better access to a variety of resources because of
+such variables as available child care, a transportation source
+available, or even time available to do things Liu et al. (2022) . In
+addition, increased access to resources such as parks or other
+greenspace have been found to decrease likelihood of mental health
+disorders, as well as improve physical activity Madzia et al. (2019).
+Different age groups each have a different response to access to
+greenspace. However, among all age groups there is a positive
+correlation.In addition to health impacts, lack of accessibility also
+affects economic opportunity when considering access to employment,
+affordable care, and other stores and shops Hu (2015).
 
 \hypertarget{food-deserts-and-swamps}{%
 \subsection{Food Deserts and Swamps}\label{food-deserts-and-swamps}}
@@ -703,9 +705,9 @@ correlation between accessibility to good nutrition environments such as
 healthy grocery stores and the demographic makeup of specific block
 groups, such as economic bracket and different ethnic groups. Lack of
 accessibility to grocery stores can have an effect on physical health
-and well-being (Aggarwal et al., 2014). This is related directly with
-consumption of healthy foods, as well as indirectly with perceived sense
-of well-being.
+and well-being (Aggarwal et al., 2014). This access is related directly
+with consumption of healthy foods, as well as indirectly with perceived
+sense of well-being.
 
 Much of the current research that has been done has shown a different
 level of accessibility for different demographics, such as low income
@@ -724,16 +726,16 @@ determine that choice pattern and identify which variables are important
 when choosing a store to help improve accessibility more than simple
 distance measures.
 
-Areas that do not have any full service grocery stores however are also
-important to look at, with those areas being known as food swamps. These
-food swamps are an idea that there are locations where there is not
-healthy food available, so the only option that is readily accessible
-for food or meals would be fast food or convenience stores. There have
-been studies analyzing the different food swamp areas and what could be
-done to improve those areas, such as adding grocery stores or corner
-markets (Bao et al., 2020). These food swamps are areas that
-discriminate between those without a readily available transit options
-and those with easy access to cars, creating a barrier to equity. In
+However, areas that do not have any full service grocery stores however
+are also important to look at, with those areas being known as food
+swamps. These food swamps are an idea that there are locations where
+there is not healthy food available, so the only option that is readily
+accessible for food or meals would be fast food or convenience stores.
+There have been studies analyzing the different food swamp areas and
+what could be done to improve those areas, such as adding grocery stores
+or corner markets (Bao et al., 2020). These food swamps are areas that
+discriminate between those without readily available transit options and
+those with easy access to cars, creating a barrier to equity. In
 addition, these food swamp areas are especially significant when looking
 at the public health impacts of food accessibility and discovering how
 we can improve the quality of food available to those in every
@@ -829,14 +831,14 @@ Salt Lake County nor to Salt Lake City, rather, we focus on communities
 in the western part of the valley, such as Magna, Kearns, and West
 Valley City.
 
-Table Table~\ref{tbl-acsdata} shows several key population statistics
-based on 2021 American Community Survey data for block groups in the
-three communities of interest. Utah County is a largely suburban county
-with high incomes and a low percentage of minority individuals. The Salt
-Lake region is more dense with somewhat lower incomes and household
-sizes but a high share of minority individuals. San Juan County is
-primarily rural, with a few small communities and a large reservation
-for the Navajo Tribe.
+Table~\ref{tbl-acsdata} shows several key population statistics based on
+2021 American Community Survey data for block groups in the three
+communities of interest. Utah County is a largely suburban county with
+high incomes and a low percentage of minority individuals. The Salt Lake
+region is more dense with somewhat lower incomes and household sizes but
+a high share of minority individuals. San Juan County is primarily
+rural, with a few small communities and a large reservation for the
+Navajo Tribe.
 
 \hypertarget{tbl-acsdata}{}
 \begin{table}
@@ -847,10 +849,10 @@ for the Navajo Tribe.
 \toprule
  & Utah & Salt Lake & San Juan\\
 \midrule
-Total population & 627098 & 655830 & 7091\\
-Total households & 171538 & 216731 & 2090\\
+Total population & 627,098 & 655,830 & 7,091\\
+Total households & 171,538 & 216,731 & 2,090\\
 Housing units per sq. km & 599 & 831 & 103\\
-Median income & 79453 & 64868 & 58586\\
+Median income & 79,453 & 64,868 & 58,586\\
 Percent minority individuals & 18 & 36 & 26\\
 \bottomrule
 \end{tabular}
@@ -947,10 +949,10 @@ per-pound cost of ground beef at various fat contents. For any stores
 that were missing any of the elements in the market basket, we first
 substituted with another ingredient that would fit the nutritional
 requirements. If no substitute was available, we included the average
-price of the missing good at other stores in community multiplied by 1.5
-as a penalty for not containing the product. The final market basket
-score is the total cost of all foods in the market basket. These costs
-can then be compared from store to store to understand general
+price of the missing good at other stores in that community multiplied
+by 1.5 as a penalty for not containing the product. The final market
+basket score is the total cost of all foods in the market basket. These
+costs can then be compared from store to store to understand general
 affordability comparisons between stores.
 
 \hypertarget{tbl-nems}{}
@@ -1008,7 +1010,7 @@ stores that we did not collect.
 To do this, we used web-based mapping databases (including OpenStreetMap
 and Google Maps) to obtain a list of grocery stores, dollar stores, and
 appropriate convenience stores throughout the state. From this search,
-we were able to determine the stores location, brand name, and store
+we were able to determine each store's location, brand name, and store
 type, which we also collected in the manual data assembly efforts. Using
 this information, we built a multiple imputation model using the
 \texttt{mice} package for R (van Buuren and Groothuis-Oudshoorn, 2011).
@@ -1136,8 +1138,8 @@ entire state of Utah.
 
 Though some basic descriptive statistics of the grocery store attributes
 were presented in Table~\ref{tbl-nems}, some additional exploration of
-the these attributes is valuable to understand the nutrition environment
-in these three communities.
+these attributes is valuable to understand the nutrition environment in
+these three communities.
 
 \begin{figure}[t]
 
@@ -1180,13 +1182,13 @@ availability score and cost score in each study community.}
 Figure~\ref{fig-nems-cost-avail} shows the relationship between the NEMS
 availability and cost scores. In this case the relationship is generally
 positive, with stores that stock more healthful options also placing
-these options at competitive prices. Conversely, stores that have fewer
-of these options tend to place the options they do stock at a higher
-price point. This relationship between availability and cost of
-healthful goods is strongest in San Juan County, with convenience stores
-anchoring the low-availability, high-premium quadrant for healthy food.
-It should be noted that these convenience stores also exist in the Utah
-County community, but we explicitly included them in the San Juan data
+these options at competitive prices. Conversely, stores with fewer
+options tend to place the options they do stock at a higher price point.
+This relationship between availability and cost of healthful goods is
+strongest in San Juan County, with convenience stores anchoring the
+low-availability, high-premium quadrant for healthy food. It should be
+noted that these convenience stores also exist in the Utah County
+community, but we explicitly included them in the San Juan data
 collection as they are the only food markets of any kind in multiple
 towns, with dozens of miles separating towns from each other.
 
@@ -1276,7 +1278,7 @@ willing to travel somewhat further for stores with attributes they
 value.
 
 The overall fit of the four models in Table~\ref{tbl-utah-models} is
-also revealing: the model with only NEMS variables gainst almost no
+also revealing: the model with only NEMS variables against almost no
 predictive power over randomly selecting any store in the community (as
 revealed by the \(\rho_0^2\) statistic). Though all sets of variables
 contribute to the overall fit, it is apparent that the bulk of model
@@ -1489,8 +1491,8 @@ The accessibility of each scenario was to be determined using the
 approximated utility coefficients of the All model estimated in
 Chapter~\ref{sec-results},
 \begin{equation}\protect\hypertarget{eq-scenu}{}{
-U_{ij}= \beta_{MCLS}( k_{ij}) +  \beta_{n-a} (\mathrm{NEMS-Availability}) + \beta_{n-c}\mathrm({NEMS-Cost}) +
- \beta_{mkt} (\mathrm{Market Basket}) + \mathbf{\beta}_{type}(\mathrm{Type}) 
+U_{ij}= \beta_{MCLS}( k_{ij}) +  \beta_{n-a} (\mathrm{NEMS-Availability}) +
+  \beta_{n-c}\mathrm({NEMS-Cost}) + \\ \beta_{mkt} (\mathrm{Market Basket}) + \pmb{\beta}_{type}(\mathrm{Type})  
 }\label{eq-scenu}\end{equation} and the total access benefit is defined
 as the consumer surplus given in Equation~\ref{eq-cs}. Note that this
 benefit is denominated in units of utility (Ben-Akiva and Lerman, 1985),
@@ -1595,8 +1597,8 @@ choice log-sum.
 For active transportation, the lack of pedestrian facilities across and
 alongside roads both in reality and in the OpenStreetMap dataset may
 substantially increase measured walk distances and times. In this
-scenario, we replace the the times measured from OpenStreetMap using R5
-with an idealized Euclidean distance function,
+scenario, we replace the times measured from OpenStreetMap using R5 with
+an idealized Euclidean distance function,
 \begin{equation}\protect\hypertarget{eq-newwalk}{}{
 t_{\mathrm{walk}} = \frac{\sqrt{2} * d'_{ij}}{v_{\mathrm{walk}}}
 }\label{eq-newwalk}\end{equation} where \(d'_{ij}\) is the Euclidean
@@ -1606,11 +1608,11 @@ al., 2006). The distance is multiplied by the square root of 2 to
 reflect the Manhattan distance (along a gridded street system). We
 retain the cap on walking distance at 10 kilometers. Though this
 distance may radically understate the real walking distance, we are
-trying to create a idealized scenario of effectively frictionless active
-transport. For public transit, we assume that the frequency of service
-is such that all transfer and initial wait times are at most 5 minutes,
-and that no person must walk more than 10 minutes to access their first
-public transport service.
+trying to create an idealized scenario of effectively frictionless
+active transport. For public transit, we assume that the frequency of
+service is such that all transfer and initial wait times are at most 5
+minutes, and that no person must walk more than 10 minutes to access
+their first public transport service.
 
 Travel times are improved in this way for all block group --- store
 pairs in the west Salt Lake Valley community.
@@ -1636,8 +1638,8 @@ new full-service store in west Salt Lake Valley}
 Figure~\ref{fig-s1results} shows the geographic distribution of benefits
 associated with locating a new store at a site in the Salt Lake
 community. The benefits are largest immediately next to the new store,
-where they exceed \$1 for each household each time the household makes a
-trip to a grocery store.
+where they exceed \(1\) for each household each time the household makes
+a trip to a grocery store.
 
 \begin{figure}[t]
 
@@ -1754,8 +1756,8 @@ Table~\ref{tbl-scenarios} presents the aggregate benefit from each of
 the three scenarios (and the result of the second scenario in all three
 communities). The Households column multiplies the difference in
 destination choice log-sum at each block group by the number of
-households in that block group, while the Non-white and Low-income
-columns weight the difference by the share of Non-white individuals and
+households in that block group, while the non-white and low-income
+columns weight the difference by the share of non-white individuals and
 low-income households respectively. All demographic data comes from the
 American Community Survey 5-year aggregations.
 
@@ -1779,11 +1781,11 @@ five times the benefits. Understanding the costs of these various
 alternatives is outside the scope of this research, but the level of
 infrastructure investment required to increase transportation level of
 service to that constructed in the simulation is likely an order of
-magnitude higher than the cost of a single new grocery store. Though it
-should also be acknowledged that improving non-automobile infrastructure
-and services would have benefits beyond just grocery store trips that we
-do not attempt to enumerate here. It is also not clear whether the level
-of improvement simulated in the second scenario could be accomplished
+magnitude higher than the cost of a single new grocery store. It should
+also be acknowledged that improving non-automobile infrastructure and
+services would have benefits beyond just grocery store trips that we do
+not attempt to enumerate here. It is also not clear whether the level of
+improvement simulated in the second scenario could be accomplished
 within the envelope of the existing store; it may be that such
 improvements would meet or exceed the cost of building a new store on a
 new site, along with stocking, staffing, and operating the store.
@@ -1797,7 +1799,7 @@ As outlined in Chapter~\ref{sec-literature}, transportation agencies
 seeking to improve the health and quality of life for residents must
 consider not simply their mobility needs, but the safety of the
 transportation system, the effects of the system on disadvantaged
-population, and the ability of residents to access quality community
+populations, and the ability of residents to access quality community
 resources. Access to nutrition is a critical topic that has been a
 frequent focus of academic literature in public health, community
 planning, and engineering, but the varying and incomplete quantitative
@@ -1826,18 +1828,18 @@ and thereby obtain marginally different outcomes.
 In selecting a survey instrument with which to collect the store
 attribute data, we selected an existing and validated instrument from
 the nutrition environment literature. The NEMS-S focus on low-calorie
-and low-fat alternatives, however may be somewhat outdated in view of
-modern nutritional guidelines. For example, the NEMS-S does not track
-the availability and price of poultry, as ``lean'' poultry is not a
-goods category in the way that ground beef comes with multiple fat
-contents. Thus a major source of protein in typical American diets (FNS,
-2021) was not traced across stores in each community. On a more basic
-level, the NEMS-S attempts to measure a store's stocking of goods that
-researchers believe are beneficial, and does not measure either what
-people wish to buy, or what they are actually buying at a store. Future
-research might attempt to survey shoppers on what they actually
-purchased at each store, though this would substantially raise the
-difficulty of collecting data.
+and low-fat alternatives may be somewhat outdated in view of modern
+nutritional guidelines. For example, the NEMS-S does not track the
+availability and price of poultry, as ``lean'' poultry is not a goods
+category in the way that ground beef comes with multiple fat contents.
+Thus a major source of protein in typical American diets (FNS, 2021) was
+not traced across stores in each community. On a more basic level, the
+NEMS-S attempts to measure a store's stocking of goods that researchers
+believe are beneficial, and does not measure either what people wish to
+buy, or what they are actually buying at a store. Future research might
+attempt to survey shoppers on what they actually purchased at each store
+--- or collect receipts of their purchases --- though this would
+substantially raise the difficulty of collecting data.
 
 Most households do not obtain all their groceries at a single store,
 though this research of necessity assumed that a simulated person chose
@@ -1909,7 +1911,7 @@ arterial roadways, which maximizes the area over which a single store
 can attract customers at the expense of neighborhood-level access.
 
 At a methodological level, understanding the reasons why people
-participate in activities, and their priorities in doing do, is a
+participate in activities, and their priorities in doing so, is a
 necessary prerequisite to developing policies that improve the quality
 of life. This is a transition from goals that simply seek to minimize
 travel delay. To better facilitate and equip staff and researchers
@@ -1917,7 +1919,7 @@ considering these kinds of questions, UDOT should encourage and develop
 activity-based approaches to travel forecasting. These approaches will
 enable the more realistic analysis described in
 Section~\ref{sec-limitations}, and provide better information for a host
-policies aimed at improving Utah's communities and their quality of
+of policies aimed at improving Utah's communities and their quality of
 life.
 
 \bookmarksetup{startatroot}
@@ -2069,6 +2071,12 @@ Dėdelė, A., Miškinytė, A., 2021. Promoting {Sustainable Mobility}: {A
 Perspective} from {Car} and {Public Transport Users}.
 \emph{International Journal of Environmental Research and Public Health}
 18, 4715. \url{https://doi.org/10.3390/ijerph18094715}
+
+\leavevmode\vadjust pre{\hypertarget{ref-dhurandhar2021}{}}%
+Dhurandhar, N.V., Petersen, K.S., Webster, C., 2021. Key {Causes} and
+{Contributors} of {Obesity}: {A Perspective}. \emph{Nursing Clinics of
+North America}, Obesity 56, 449--464.
+\url{https://doi.org/10.1016/j.cnur.2021.07.007}
 
 \leavevmode\vadjust pre{\hypertarget{ref-dong2006}{}}%
 Dong, X., Ben-Akiva, M.E., Bowman, J.L., Walker, J.L., 2006. Moving from
