--- a/Equitable-Access-to-Nutrition-in-Utah.tex
+++ b/Equitable-Access-to-Nutrition-in-Utah.tex
@@ -214,7 +214,7 @@ that UDOT work to increase the availability of community-sized grocery
 stores in low-access areas, and consider activity-based methods of
 measuring resource access.
 \end{abstract}
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[enhanced, frame hidden, breakable, sharp corners, interior hidden, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, enhanced, frame hidden, interior hidden, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
