Make images wider in landscape

--- a/Equitable-Access-to-Nutrition-in-Utah.tex
+++ b/Equitable-Access-to-Nutrition-in-Utah.tex
@@ -1447,7 +1447,7 @@ for non-vehicle users.
 
 \raisebox{-\height}{
 
-\includegraphics[width=4in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-1.pdf}
+\includegraphics[width=5in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-1.pdf}
 
 }
 
@@ -1462,7 +1462,7 @@ for non-vehicle users.
 
 \raisebox{-\height}{
 
-\includegraphics[width=4in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-2.pdf}
+\includegraphics[width=5in,height=\textheight]{04_estimation_files/figure-pdf/fig-map-nocar-2.pdf}
 
 }
 
@@ -1676,7 +1676,7 @@ close to you are already sufficient.
 
 \raisebox{-\height}{
 
-\includegraphics[width=4in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2sjut-1.pdf}
+\includegraphics[width=5in]{05_scenarios_files/figure-pdf/fig-s2sjut-1.pdf}
 
 }
 
@@ -1691,7 +1691,7 @@ close to you are already sufficient.
 
 \raisebox{-\height}{
 
-\includegraphics[width=4in,height=\textheight]{05_scenarios_files/figure-pdf/fig-s2sjut-2.pdf}
+\includegraphics[width=5in]{05_scenarios_files/figure-pdf/fig-s2sjut-2.pdf}
 
 }
 
