Restructure into journal article.

--- a/06_conclusion.qmd
+++ b/06_conclusion.qmd
@@ -1,24 +1,17 @@
 # Conclusions and Recommendations {#sec-conclude}
 
-As outlined in @sec-literature, transportation agencies seeking to improve the
-health and quality of life for residents must consider not simply their mobility
-needs, but the safety of the transportation system, the effects of the system on
-disadvantaged populations, and the ability of residents to access quality
-community resources. Access to nutrition is a critical topic that has been a
-frequent focus of academic literature in public health, community planning, and
-engineering, but the varying and incomplete quantitative definitions of access
-have perhaps limited efforts at developing solutions.
+Access to nutrition is a critical topic that has been a frequent focus of
+academic literature in public health, community planning, and engineering, but
+the varying and incomplete quantitative definitions of access have perhaps
+limited efforts at developing solutions.
 
-In this research, we explored an emerging technique to measure access to
-nutrition in multiple communities in Utah that combines transport access with
-the quality of markets, weighted against each other. We then used this model to
-examine an array of targeted policies that would potentially improve access to
-nutrition to a specific community.
-
-This concluding section presents both a series of limitations to this research
-with associated opportunities for future efforts, followed by specific
-recommendations to the Utah Department of Transportation as it seeks to pursue
-its mission to "Enhance the Quality of Life through Transportation."
+In this research, the model we developed and informed with location-based
+services data suggested that policies that increased the availability and
+quality of grocery stores would do more to enhance access nutrition than
+strategies that increased the transit level of service and travel times in three
+different Utah communities. These findings may not be general, but they largely
+support the review of food desert literature in @beulac2009 as well as 
+critical evaluations by @shannon2014 and @wright2016.
 
 ## Limitations {#sec-limitations}
 
@@ -69,7 +62,9 @@ determined by an activity-based model, as proposed by [@dong2006]. In this
 exercise, which we leave to future research, the grocery maintenance trips could
 be explicitly modeled, with synthetic individuals of unique characteristics
 choosing destinations that are available on the course of their other daily
-activities, using their chosen travel modes.
+activities, using their chosen travel modes. This proposal would effectively 
+extend the methods of  @widener2014 within the framework of explicit
+activity-travel modeling.
 
 Finally, the scenarios presented in @sec-scenarios are designed to illustrate
 potential applications of this accessibility methodology, with a comparative
@@ -79,36 +74,3 @@ scale or rank-ordering of the estimated benefits. A comprehensive search for the
 location that would maximize benefits would be an interesting exercise, which we
 also leave to future research.
 
-## Recommendations {#sec-recommend}
-
-This research results in two recommendations to the Utah Department of
-Transportation and its partner agencies.
-
-First, the research has underlined that communities in Utah have large
-differences in their ability to access quality nutrition, and that many
-communities --- especially in rural Utah --- travel long distances to obtain
-quality goods. At some level, this is evidence that UDOT has succeeded in its
-mobility-focused goals of connecting communities with fluid and reliable
-transportation infrastructure. On a less encouraging note, this observation also
-underscores the disparity in access defined by the availability of automobiles
-with which to use this infrastructure. For Utah households with limited vehicle
-availability, access to nutrition is considerably constricted. The research also
-revealed, however, that simply improving transit access and active
-transportation paths might not be as beneficial as either improving the quality
-of goods available in existing stores, or encouraging new store locations. The
-role of UDOT in pursuing such policies needs to be investigated. One potential
-strategy might be to alter access management, highway prioritization, and other
-policies in a way that encourages more stores with high-quality offerings in
-more communities. This would alter the present pattern of locating large-scale
-stores near arterial roadways, which maximizes the area over which a single
-store can attract customers at the expense of neighborhood-level access.
-
-At a methodological level, understanding the reasons why people participate in
-activities, and their priorities in doing so, is a necessary prerequisite to
-developing policies that improve the quality of life. This is a transition from
-goals that simply seek to minimize travel delay. To better facilitate and equip
-staff and researchers considering these kinds of questions, UDOT should
-encourage and develop activity-based approaches to travel forecasting. These
-approaches will enable the more realistic analysis described in
-@sec-limitations, and provide better information for a host of policies aimed at
-improving Utah's communities and their quality of life.
